Closed Bug 1691920 Opened 5 years ago Closed 5 years ago

jit-test gc/bug-1531626.js fails on Apple M1 hardware

Categories

(Core :: JavaScript: GC, defect, P1)

ARM64
macOS
defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: jonco, Assigned: allstars.chh)

Details

Attachments

(1 file)

As reported by Lars:

I made a local debug-opt shell build (M1 mbp, macos x 11.2.0, very recent xcode + homebrew, mozilla-central from last night) and ran jit-test --tbpl, and I get these failures:

FAILURES:
gc/bug-1531626.js
--ion-eager --ion-offthread-compile=off --more-compartments gc/bug-1531626.js
--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads gc/bug-1531626.js
--baseline-eager gc/bug-1531626.js
--blinterp-eager gc/bug-1531626.js
--no-blinterp --no-baseline --no-ion --more-compartments gc/bug-1531626.js

Severity: -- → N/A
Priority: -- → P1
Assignee: nobody → allstars.chh

Add a read-only parameter systemPageSizeKB to get the same result from
js::Nursery::roundSize.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: