Bug 1691920 - Add a systemPageSizeKB parameter. r=jonco

Add a read-only parameter systemPageSizeKB to get the same result from
js::Nursery::roundSize.

Differential Revision: https://phabricator.services.mozilla.com/D106188