js/public/GCAPI.h
@@ -405,6 +405,13 @@ typedef enum JSGCParamKey {
    * Pref: None
    */
   JSGC_NURSERY_TIMEOUT_FOR_IDLE_COLLECTION_MS = 46,
+
+  /**
+   * The system page size in KB.
+   *
+   * This parameter is read-only.
+   */
+  JSGC_SYSTEM_PAGE_SIZE_KB = 47,
 } JSGCParamKey;
 
 /*
